Remove a lot of old code + commit current progress of the rewrite